Update CSS to Fix White Scrollbar Corner

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -81,7 +81,7 @@
     -fx-background-color: transparent;
 }
 
-.console-container > .corner {      /* The corners of the scrollbar */
+.corner {      /* The corners of the scrollbar */
     -fx-background-color: #232832;
 }
 
